# virtiofsd

./: .gitignore  .gitlab-ci.yml  Cargo.toml  NOTICE.md  README.md
.github/workflows/: build-macos.yml
doc/: migration.md
scripts/: package-macos-artifact.sh
src/: descriptor_utils.rs  file_traits.rs  filesystem.rs  fuse.rs  lib.rs  libc_compat.rs  limits.rs  main.rs  oslib.rs  read_dir.rs  sandbox.rs  seccomp.rs  server.rs  util.rs  vhost_user.rs
src/passthrough/: credentials.rs  file_handle.rs  guest_fd_limit.rs  inode_store.rs  mod.rs  mount_fd.rs  read_only.rs  stat.rs  util.rs
src/passthrough/device_state/: deserialization.rs  mod.rs  serialization.rs  serialized.rs
src/passthrough/device_state/preserialization/: file_handles.rs  find_paths.rs  mod.rs  proc_paths.rs
src/soft_idmap/: id_types.rs  mod.rs
