[package]
name = "virtiofsd"
description = "A virtio-fs vhost-user device daemon"
version = "1.13.4"
authors = ["The Virtiofs Project Developers"]
edition = "2018"
homepage = "https://virtio-fs.gitlab.io/"
repository = "https://gitlab.com/virtio-fs/virtiofsd"
license = "Apache-2.0 AND BSD-3-Clause"
readme = "README.md"

exclude = [".gitlab-ci.yml"]

[features]
default = ["seccomp"]
# Expose seccomp bindings from the library.
# On Linux, this pulls in libseccomp-sys. On macOS, seccomp is a no-op.
seccomp = []
# Enabling Xen support will _disable_ QEMU/KVM support!
xen = ["vhost-user-backend/xen", "vhost/xen", "vm-memory/xen"]

[[bin]]
name = "virtiofsd"
required-features = ["seccomp"]

[dependencies]
bitflags = "1.2"
btree-range-map = "0.7"
env_logger = "0.8.4"
futures = { version = "0.3", features = ["thread-pool"] }
libc = "0.2.177"
log = "0.4"
clap = { version = "4", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
vhost-user-backend = "0.21.0"
vhost = "0.15.0"
virtio-bindings = "0.2.7"
vm-memory = { version = "=0.17.1", features = ["backend-mmap", "backend-atomic"] }
virtio-queue = "0.17.0"
vmm-sys-util = "0.15.0"
syslog = "6.1"

[target.'cfg(target_os = "linux")'.dependencies]
capng = "0.2.2"
libseccomp-sys = "0.2"

[patch.crates-io]
vhost = { git = "https://github.com/christhomas/vhost.git", branch = "cth/macos" }
vhost-user-backend = { git = "https://github.com/christhomas/vhost.git", branch = "cth/macos" }
vmm-sys-util = { git = "https://github.com/christhomas/vmm-sys-util.git", branch = "cth/macos" }

[profile.release]
lto = true
